sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:3: error: not found: value lgr
  var gap : Int = lgr
                  ^AlgCombSort:11: error: not found: value lgr
    while (rang+gap<lgr) {
                    ^